crates/native/tests/snapshots/parser_tests__extend_type_with_keyword_name.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"extend type query { name: String }\")"
---
Document {
    source: Source {
        code: "extend type query { name: String }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystemExtension(
            Type(
                Object(
                    ObjectTypeExtension {
                        name: TypeName(
                            Name(
                                "query",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "name",
                                    ),
                                ),
                                arguments: [],
                                typ: Named(
                                    NamedType {
                                        name: TypeName(
                                            Name(
                                                "String",
                                            ),
                                        ),
                                    },
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
