crates/native/tests/snapshots/parser_tests__field_with_description.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(r#\"type User { \"User ID\" id: ID! }\"#)"
---
Document {
    source: Source {
        code: "type User { \"User ID\" id: ID! }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "User",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: Some(
                                    Description {
                                        value: "User ID",
                                    },
                                ),
                                name: FieldName(
                                    Name(
                                        "id",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "ID",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
