crates/native/tests/snapshots/parser_tests__fragment_on_keyword_type_name.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"fragment F on Query { id name } query { ...F }\")"
---
Document {
    source: Source {
        code: "fragment F on Query { id name } query { ...F }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 0,
                        end: 31,
                    },
                    name: FragmentName(
                        Name(
                            "F",
                        ),
                    ),
                    variable_definitions: [],
                    type_condition: TypeName(
                        Name(
                            "Query",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 22,
                                        end: 29,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "id",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 25,
                                        end: 31,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "name",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 32,
                        end: 46,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            FragmentSpread(
                                FragmentSpread {
                                    span: Span {
                                        start: 40,
                                        end: 46,
                                    },
                                    fragment_name: FragmentName(
                                        Name(
                                            "F",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
